--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,4 @@ dependencyResolutionManagement {
 }
 rootProject.name = "BlueBeatHRM"
 include ':app'
+include ':modules:core:core-bluetooth-connection'
