Adding new module for bt scanning ui. Integrate central routing

--- a/gradle.properties
+++ b/gradle.properties
@@ -23,4 +23,6 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 
 compose.bom.version=2023.04.01
+compose.navigation.version=2.6.0
 kotlin.bom.version=1.8.0
+kotlin.compiler.ext.version=1.3.2
