--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         applicationId "com.nishi.bluebeat"
-        minSdk 28
+        minSdk 31
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -37,7 +37,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.3.2'
+        kotlinCompilerExtensionVersion project.property("kotlin.compiler.ext.version")
     }
     packagingOptions {
         resources {
@@ -59,6 +59,12 @@ dependencies {
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
+    implementation "androidx.navigation:navigation-compose:${project.property("compose.navigation.version")}"
+    implementation "com.google.accompanist:accompanist-permissions:0.30.1"
+
+
+    implementation project(path: ':modules:core:core-bluetooth-scanner-ui')
+    implementation project(path: ':modules:core:core-bluetooth-connection')
 
     //UI test Deps
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
