--- a/modules/core/core-bluetooth-scanner-ui/build.gradle
+++ b/modules/core/core-bluetooth-scanner-ui/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 android {
-    namespace 'com.nishi.corebluetoothconnection'
+    namespace 'com.nishi.corebluetoothscanner'
     compileSdk 33
 
     defaultConfig {
@@ -28,16 +28,32 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures { // Enables Jetpack Compose for this module
+        compose = true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion project.property("kotlin.compiler.ext.version")
+    }
 }
 
 dependencies {
+
     implementation platform("androidx.compose:compose-bom:${project.property("compose.bom.version")}")
     implementation platform("org.jetbrains.kotlin:kotlin-bom:${project.property("kotlin.bom.version")}")
 
     implementation 'androidx.core:core-ktx'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
-    implementation "androidx.compose.material:material-icons-extended"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core"
+
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:2.6.1"
+    implementation 'androidx.activity:activity-compose:1.7.2'
+    implementation 'androidx.compose.ui:ui'
+    implementation 'androidx.compose.ui:ui-graphics'
+    implementation 'androidx.compose.ui:ui-tooling-preview'
+    implementation 'androidx.compose.material3:material3'
+    implementation "androidx.navigation:navigation-compose:${project.property("compose.navigation.version")}"
+    implementation "com.google.accompanist:accompanist-permissions:0.30.1"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
