--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,4 @@ dependencyResolutionManagement {
 rootProject.name = "BlueBeatHRM"
 include ':app'
 include ':modules:core:core-bluetooth-connection'
+include ':modules:core:core-bluetooth-scanner-ui'
