--- a/gradle.properties
+++ b/gradle.properties
@@ -21,8 +21,8 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
-
-compose.bom.version=2023.04.01
+project.android.gradle.plugin.version=8.0.2
+project.compose.bom.version=2023.04.01
 compose.navigation.version=2.6.0
-kotlin.bom.version=1.8.0
-kotlin.compiler.ext.version=1.3.2
+project.kotlin.version=1.8.0
+project.compose.compiler.version=1.3.2
